// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login user enters password validates input 1`] = `
Array [
  Object {
    "text": "Password is required",
    "validate": [Function],
  },
  Object {
    "text": "Password must be more than 3 characters",
    "validate": [Function],
  },
]
`;

exports[`Login user enters username validates input 1`] = `
Array [
  Object {
    "text": "Username is required",
    "validate": [Function],
  },
  Object {
    "text": "Username must be more than 3 characters",
    "validate": [Function],
  },
]
`;

exports[`Login user submits login form with username and password filled if credentials are invalid displays a snackbar message with the api error 1`] = `
<WithStyles(Snackbar)
  anchorOrigin={
    Object {
      "horizontal": "center",
      "vertical": "bottom",
    }
  }
  autoHideDuration={3000}
  onClose={[Function]}
  open={true}
>
  <WithStyles(SpecialSnackbar)
    message="Username/password were not found!"
    onClose={[Function]}
    variant="error"
  />
</WithStyles(Snackbar)>
`;

exports[`Login user submits login form with username and password filled if credentials are valid redirects user to /todo 1`] = `
<Redirect
  push={false}
  to="/todo"
/>
`;
